# NHMDlabelreader

./: .gitignore  README.md  build_requirements.txt  requirements.txt  setup.cfg
.github/workflows/: python-package.yml
docs/: KSP_notes.md  requirements.txt
docs/source/: api.rst  conf.py  index.rst  taxonchecker.rst  util.rst
docs/source/modules/: util.rst
grammars/: csad.lark
src/: butterflyatlasreader.py  csadcardreader.py  herbariumcardreader.py  ocrreader.py  spidercardreader.py
src/labelreader/labeldetect/: labeldetect.py
src/labelreader/locality/: __init__.py  dkchecker.py
src/labelreader/ocr/: tesseract.py
src/labelreader/taxonchecker/: dbtaxonchecker.py  gbiftaxonchecker.py  taxonchecker.py
src/labelreader/util/: util.py
src/ocr/: tesseract.py
src/scripts/: ocrreader.py  spidercardreader.py
tests/: CSAD_card1.txt  CSAD_card10.txt  CSAD_card11.txt  CSAD_card12.txt  CSAD_card13.txt  CSAD_card14.txt  CSAD_card15.txt  CSAD_card16.txt  CSAD_card17.txt  CSAD_card18.txt  CSAD_card19.txt  CSAD_card2.txt  CSAD_card20.txt  CSAD_card21.txt  CSAD_card22.txt  CSAD_card23.txt  CSAD_card24.txt  CSAD_card25.txt  CSAD_card26.txt  CSAD_card27.txt  CSAD_card28.txt  CSAD_card29.txt  CSAD_card3.txt  CSAD_card30.txt  CSAD_card31.txt  CSAD_card32.txt  CSAD_card33.txt  CSAD_card34.txt  CSAD_card35.txt  CSAD_card36.txt  CSAD_card37.txt  CSAD_card38.txt  CSAD_card4.txt  CSAD_card5.txt  CSAD_card6.txt  CSAD_card7.txt  CSAD_card8.txt  CSAD_card9.txt  CSAD_cardtest.txt  test_labelreader_labeldetect_labeldetect.py  (+7 more)
