[metadata]
name = NHMDlabelreader
version = 0.0.1
author = Kim Steenstrup Pedersen
author_email = kimstp@snm.ku.dk
description = The Natural History Museum of Denmark (NHMD) labelreader package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NHMDenmark/NHMDlabelreader
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache-2.0 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires = 
    opencv-contrib-python >= 4.5.5
    pytesseract >= 0.3.9
    pyzbar >= 0.1.9
    pylibdmtx >= 0.1.10
    pandas >= 1.4.2
    pytest >= 7.1.2
    
[options.packages.find]
where = src
