[metadata]
name = NHMDlabelreader
version = 0.0.1
author = Kim Steenstrup Pedersen
author_email = kimstp@snm.ku.dk
description = The Natural History Museum of Denmark (NHMD) labelreader package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NHMDenmark/NHMDlabelreader
project_urls =
    Bug Tracker = https://github.com/NHMDenmark/NHMDlabelreader/issues
    Source = https://github.com/NHMDenmark/NHMDlabelreader/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache-2.0 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
py_modules = spidercardreader,butterflyatlasreader,herbariumcardreader
packages = find:
python_requires = >=3.8
install_requires = 
    opencv-contrib-python >= 4.9.0.0
    pytesseract >= 0.3.9
    zxing-cpp == 2.2.0
    pandas >= 1.4.2
    scikit-image >= 0.19.2
    numpy >= 1.22.4
    openpyxl >= 3.0.10
    thefuzz == 0.22.1
    python-Levenshtein == 0.25.0
    pygbif >= 0.6.1
    pytest >= 7.1.2
    
[options.packages.find]
where = src


[options.entry_points]
console_scripts =
    spidercardreader = spidercardreader:main
    butterflyatlasreader = butterflyatlasreader:main
    herbariumcardreader = herbariumcardreader:main
